samples/_failures_safe/1761282956_3eedd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e30ec446.c: In function ‘main’:
./samples/SAFE/__tmp_e30ec446.c:173:5: error: expected expression at end of input
  173 |     if (len > 0 && input[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_e30ec446.c:173:5: error: expected declaration or statement at end of input
